# tgr-compiler

./: .gitignore  Cargo.toml  Makefile  README.md  compiler  grades.sh  grammar.txt  p1_grade.sh  p2_grade.sh  p3_grade.sh
data/: generator.py  grammar.json  grammar.txt  original_grammar.txt  parsing_push_map.json  parsing_table.json
lr/: action-char.json  action-num.json  action.json  goto.json  rules.json
src/: cfg.rs  main.rs  optimizer.rs  parser.rs  parsing_push_map.json  parsing_table.json  scanner.rs  typechecker.rs
