[package]
name = "cs4240"
version = "0.1.0"
authors = ["Christopher Tam <christophertam@gatech.edu>", "Dhruv Mehra <dmehra6@gatech.edu"]

[dependencies]
regex = "~0.2"
clap = "2.30.0"
env_logger = "^0.5.6"
lazy_static = "1.0"
log = "^0.4.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
indextree = "1.1.1"
indexmap = "^1.0"